--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html>
+<body>
 
+<nav>
+    <ul>
+        <li><a href="#section1">About Me</a></li>
+        <li><a href="#section2">Programming Skills</a></li>
+        <li><a href="#section3">Projects</a></li>
+        <li><a href="#section4">Experience</a></li>
+        <li><a href="#section5">Contact Me</a></li>
+        <li><i id="resume_text"><a href="./resume.html">Resume</a></i></li>
+    </ul>
+</nav>
+
+<h2 id="section1">About Me</h2>
+<h2 id="section2">Programming Skills</h2>
+<h2 id="section3">Projects</h2>
+<h2 id="section4">Experience</h2>
+<h2 id="section5">Contact Me</h2>
+
+</body>
+</html>
