--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <body>
 
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
 <nav>
     <ul>
         <li><a href="#section1">About Me</a></li>
