--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
 <nav>
     <ul>
-        <li><a href="#section1">About Me</a></li>
-        <li><a href="#section2">Programming Skills</a></li>
-        <li><a href="#section3">Projects</a></li>
-        <li><a href="#section4">Experience</a></li>
-        <li><a href="#section5">Contact Me</a></li>
-        <li><i id="resume_text"><a href="./resume.html">Resume</a></i></li>
+        <li class="link"><a href="#section1">About Me</a></li>
+        <li class="link"><a href="#section2">Programming Skills</a></li>
+        <li class="link"><a href="#section3">Projects</a></li>
+        <li class="link"><a href="#section4">Experience</a></li>
+        <li class="link"><a href="#section5">Contact Me</a></li>
+        <li class="link"><i id="resume_text"><a href="./resume.html">Resume</a></i></li>
     </ul>
 </nav>
 
