--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
 
-<head>
-  <link rel="stylesheet" href="styles.css">
-</head>
-
 <nav>
-    <ul>
-        <li class="link"><a href="#section1">About Me</a></li>
-        <li class="link"><a href="#section2">Programming Skills</a></li>
-        <li class="link"><a href="#section3">Projects</a></li>
-        <li class="link"><a href="#section4">Experience</a></li>
-        <li class="link"><a href="#section5">Contact Me</a></li>
-        <li class="link"><i id="resume_text"><a href="./resume.html">Resume</a></i></li>
+    <div class="nav-name">Justin Liu</div>
+    <ul class="link">
+        <li><a class="nav-link" href="#section1">About Me</a></li>
+        <li><a class="nav-link" href="#section2">Programming Skills</a></li>
+        <li><a class="nav-link" href="#section3">Projects</a></li>
+        <li><a class="nav-link" href="#section4">Experience</a></li>
+        <li><a class="nav-link" href="#section5">Contact Me</a></li>
+        <li><i id="resume_text"><a class="nav-link" href="./resume.html">Resume</a></i></li>
     </ul>
 </nav>
 
