--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,33 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+
+    <title>Resume</title>
+    <meta name="Justin Liu" content="Justin Liu">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
+</head>
+
 <body>
-<h2 id="section1">Resume</h2>
+    <script src="js/scripts.js"></script>
+
+    <nav>
+        <div class="nav-name">Justin Liu</div>
+        <ul class="link">
+            <li><a class="nav-link" href="./index.html">About</a></li>
+            <li><a class="nav-link" href="./index.html">Programming</a></li>
+            <li><a class="nav-link" href="./index.html">Projects</a></li>
+            <li><a class="nav-link" href="./index.html">Experience</a></li>
+            <li><a class="nav-link" href="./index.html">Contact</a></li>
+            <li><i id="resume_text"><a class="nav-link" href="./resume.html">Resume</a></i></li>
+        </ul>
+    </nav>
+
+
+
+
 
 </body>
 </html>
