--- a/index.html
+++ b/index.html
@@ -8,34 +8,35 @@
     <meta name="Justin Liu" content="Justin Liu">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
+    <script src="js/scripts.js"></script>
 </head>
 
 <body>
-    <script src="js/scripts.js"></script>
+    <nav>
+        <div class="nav-name">Justin Liu</div>
+        <ul class="link">
+            <li><a class="nav-link" href="#about">About</a></li>
+            <li><a class="nav-link" href="#programming">Programming</a></li>
+            <li><a class="nav-link" href="#projects">Projects</a></li>
+            <li><a class="nav-link" href="#experience">Experience</a></li>
+            <li><a class="nav-link" href="#contact">Contact</a></li>
+            <li><i id="resume_text"><a class="nav-link" href="./resume.html">Resume</a></i></li>
+        </ul>
+    </nav>
 
+    <div class="hero" id="hero_box">
+        <img id="hero_img" src="justin_picture.jpg" alt="Hero Picture"></img>
+        <div id="hero_text">Hello!</div>
+    </div>
 
-<nav>
-    <div class="nav-name">Justin Liu</div>
-    <ul class="link">
-        <li><a class="nav-link" href="#about">About</a></li>
-        <li><a class="nav-link" href="#programming">Programming</a></li>
-        <li><a class="nav-link" href="#projects">Projects</a></li>
-        <li><a class="nav-link" href="#experience">Experience</a></li>
-        <li><a class="nav-link" href="#contact">Contact</a></li>
-        <li><i id="resume_text"><a class="nav-link" href="./resume.html">Resume</a></i></li>
-    </ul>
-</nav>
-
-
-<h2 class="headers" id="about">About Me</h2>
-<p id="aboutme_text">I’m currently a freshman at the University of Michigan College of 
-    Engineering majoring in Computer Science.  I’m currently a part of
-    VOID tech consulting and MedLaunch at the University.</p>
-<h2 class="headers" id="programming">Programming Skills</h2>
-<p>ooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga fillerooga booga filler</p>
-<h2 class="headers" id="projects">Projects</h2>
-<h2 class="headers" id="experience">Experience</h2>
-<h2 class="headers" id="contact">Contact Me</h2>
+    <h2 class="headers" id="about">About Me</h2>
+    <p id="aboutme_text">I’m currently a freshman at the University of Michigan College of 
+        Engineering majoring in Computer Science.  I’m currently a part of
+        VOID tech consulting and MedLaunch at the University.</p>
+    <h2 class="headers" id="programming">Programming Skills</h2>
+    <h2 class="headers" id="projects">Projects</h2>
+    <h2 class="headers" id="experience">Experience</h2>
+    <h2 class="headers" id="contact">Contact Me</h2>
 
 
 </body>
