--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         <div class="nav-name">Justin Liu</div>
         <ul class="link">
             <li><a class="nav-link" href="#about">About</a></li>
-            <li><a class="nav-link" href="#programming">Programming</a></li>
             <li><a class="nav-link" href="#projects">Projects</a></li>
             <li><a class="nav-link" href="#experience">Experience</a></li>
             <li><a class="nav-link" href="#contact">Contact</a></li>
@@ -26,15 +25,34 @@
 
     <div class="hero" id="hero_box">
         <img id="hero_img" src="justin_picture.jpg" alt="Hero Picture"></img>
-        <div id="hero_text">Hello!</div>
+        <div id="hero_text">I’m currently a freshman at the University of Michigan College of 
+            Engineering majoring in Computer Science. I’m currently a part of VOID tech consulting and MedLaunch at the University.</div>
     </div>
 
     <h2 class="headers" id="about">About Me</h2>
-    <p id="aboutme_text">I’m currently a freshman at the University of Michigan College of 
-        Engineering majoring in Computer Science.  I’m currently a part of
-        VOID tech consulting and MedLaunch at the University.</p>
-    <h2 class="headers" id="programming">Programming Skills</h2>
+        <p id="aboutme_text">I’m currently a freshman at the University of Michigan College of 
+            Engineering majoring in Computer Science.  I’m currently a part of
+            VOID tech consulting and MedLaunch at the University.
+        </p>
     <h2 class="headers" id="projects">Projects</h2>
+        <div class="project1">
+            <div class="project1left">
+                <p id="p1name">Two Player Tetris</p>
+                <hr id="projectLine" size="7" width="90%" color="grey">  
+                <p id="p1paragraph">A way to play the game Tetris as a team. Players cooperate on the same board and work to stay alive for as long as possible. Made in PyGame</p>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <p id="p1link"><a href=https://github.com/Jello15659/2PTetris>See more about this project</a></p>
+            </div>
+            <div class="project1right">
+                <img src="2ptetris.png" alt="P1picture"></img>
+            </div>
+        </div>
     <h2 class="headers" id="experience">Experience</h2>
     <h2 class="headers" id="contact">Contact Me</h2>
 
