--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a class="nav-link" href="#projects">Projects</a></li>
             <li><a class="nav-link" href="#experience">Experience</a></li>
             <li><a class="nav-link" href="#contact">Contact</a></li>
-            <li><i id="resume_text"><a class="nav-link" href="./resume.html">Resume</a></i></li>
+            <li id="resume_text"><a class="nav-link" href="./resume.html">Resume</a></li>
         </ul>
     </nav>
 
