--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 
 <body>
     <nav>
-        <div class="nav-name">Justin Liu</div>
+        <a class="nav-name" href="./index.html">Justin Liu</a>
         <ul class="link">
             <li><a class="nav-link" href="#about">About</a></li>
             <li><a class="nav-link" href="#projects">Projects</a></li>
             <li><a class="nav-link" href="#experience">Experience</a></li>
             <li><a class="nav-link" href="#contact">Contact</a></li>
-            <li id="resume_text"><a class="nav-link" href="./resume.html">Resume</a></li>
+            <li><a class="nav-link" id="resume_text" href="./resume.html">Resume</a></li>
         </ul>
     </nav>
 
     <div class="hero" id="hero_box">
-        <img id="hero_img" src="justin_picture.jpg" alt="Hero Picture"></img>
+        <img id="hero_img" src="data/justin_picture.jpg" alt="Hero Picture"></img>
         <div id="hero_text">I’m currently a freshman at the University of Michigan College of 
             Engineering majoring in Computer Science. I’m currently a part of VOID tech consulting and MedLaunch at the University.</div>
     </div>
@@ -39,21 +39,29 @@
             <div class="project1left">
                 <p id="p1name">Two Player Tetris</p>
                 <hr id="projectLine" size="7" width="90%" color="grey">  
-                <p id="p1paragraph">A way to play the game Tetris as a team. Players cooperate on the same board and work to stay alive for as long as possible. Made in PyGame</p>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
+                <p id="p1paragraph">A way to play the game Tetris as a team. Players cooperate on the same board and work to stay alive for as long as possible. Made with PyGame.</p>
                 <p id="p1link"><a href=https://github.com/Jello15659/2PTetris>See more about this project</a></p>
             </div>
             <div class="project1right">
-                <img src="2ptetris.png" alt="P1picture"></img>
+                <!-- <img src="2ptetris.png" alt="P1picture"></img> -->
+                <img id="p1picture" src="data/tetrisclip.gif" alt="P1picture"></img>
             </div>
         </div>
     <h2 class="headers" id="experience">Experience</h2>
+        <ul class="experience_list">
+            <li class="exp1">
+                <img id="exp1pic" src="data/exp1.png" alt="exp1pic"></img>
+                <p id="exp1text">Taught an 8-week introductory course on Pygame (extension of the coding language Python) to children of ages 11-12</p>
+            </li>
+            <li class="exp2">
+                <img id="exp2pic" src="data/exp2.png" alt="exp2pic"></img>
+                <p id="exp2text">Tested mateirals for tensile and anti-corrosive properties to determine optimal bio-material for bone im-plants</p>
+            </li>
+            <li class="exp3">
+                <img id="exp3pic" src="data/exp3.png" alt="exp3pic"></img>
+                <p id="exp3text">Determined effects of varying treatment methods on anal canal cancer from 1990 to present</p>
+            </li>
+        </ul>
     <h2 class="headers" id="contact">Contact Me</h2>
 
 
