--- a/resume.html
+++ b/resume.html
@@ -13,16 +13,18 @@
 
 <body>
     <nav>
-        <div class="nav-name">Justin Liu</div>
+        <a class="nav-name" href="./index.html">Justin Liu</a>
         <ul class="link">
             <li><a class="nav-link" href="./index.html">About</a></li>
             <li><a class="nav-link" href="./index.html">Projects</a></li>
             <li><a class="nav-link" href="./index.html">Experience</a></li>
             <li><a class="nav-link" href="./index.html">Contact</a></li>
-            <li><i id="resume_text"><a class="nav-link" href="./resume.html">Resume</a></i></li>
+            <li><a id="resume_text" class="nav-link" href="./resume.html">Resume</a></li>
         </ul>
     </nav>
 
+    <iframe id="resume" src="data/Resume.pdf" title="Resume" width="100%" height="1200rem">
+    </iframe>
 
 
 
