almost got the mobile navbar

--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
     <meta name="Justin Liu" content="Justin Liu">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
-    <script src="js/scripts.js"></script>
+    <script src="scripts.js"></script>
 </head>
 
 <body>
-    <nav>
+    <nav class="navbar">
         <a class="nav-name" href="./index.html">Justin Liu</a>
         <ul class="link">
             <li><a class="nav-link" href="#about">About</a></li>
             <li><a class="nav-link" href="#projects">Projects</a></li>
             <li><a class="nav-link" href="#experience">Experience</a></li>
-            <li><a class="nav-link" href="#contact">Contact</a></li>
+            <!-- <li><a class="nav-link" href="#contact">Contact</a></li> -->
             <li><a class="nav-link" id="resume_text" href="./resume.html">Resume</a></li>
         </ul>
+        <!-- for mobile version only -->
+        <button class="hamburger">hamburger</button>
     </nav>
 
     <div class="hero" id="hero_box">
@@ -62,8 +64,8 @@
                 <p id="exp3text">Determined effects of varying treatment methods on anal canal cancer from 1990 to present</p>
             </li>
         </ul>
-    <h2 class="headers" id="contact">Contact Me</h2>
-
-
+    <!-- <h2 class="headers" id="contact">Contact Me</h2>
+        <p id="contactinfo">Email: jsliu@umich.edu</p> -->
+    <p id="contactinfo">Email me at jsliu@umich.edu</p>
 </body>
 </html>
