oops, this is the actual fixed navbar

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
 
     <title>Justin Liu</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="Justin Liu" content="Justin Liu">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <nav class="topnav">
+    <nav class="navbar">
         <a class="nav-name" href="./index.html">Justin Liu</a>
         <ul class="link">
             <li><a class="nav-link" href="#about">About</a></li>
@@ -21,20 +21,17 @@
             <li><a class="nav-link" id="resume_text" href="./resume.html">Resume</a></li>
         </ul>
         <!-- for mobile version only -->
-        <a href="javascript:void(0);"  onclick="myFunction()">
-            <i class="hamburger">Hamburger</i>
-        </a>
+        <button class="hamburger">Hamburger</button>
     </nav>
 
     <div class="hero" id="hero_box">
         <img id="hero_img" src="data/justin_picture.jpg" alt="Hero Picture"></img>
-        <div id="hero_text">I’m currently a freshman at the University of Michigan College of 
-            Engineering majoring in Computer Science. I’m currently a part of VOID tech consulting and MedLaunch at the University.</div>
+        <div id="hero_text">Hello! I’m Justin and I'm a freshman at UMich College of 
+            Engineering majoring in Computer Science. </div>
     </div>
 
     <h2 class="headers" id="about">About Me</h2>
-        <p id="aboutme_text">I’m currently a freshman at the University of Michigan College of 
-            Engineering majoring in Computer Science.  I’m currently a part of
+        <p id="aboutme_text">Some of my favorite activities include running, exercising, making games, and playing leauge. I’m currently a part of
             VOID tech consulting and MedLaunch at the University.
         </p>
     <h2 class="headers" id="projects">Projects</h2>
@@ -69,7 +66,6 @@
         <p id="contactinfo">Email: jsliu@umich.edu</p> -->
     <p id="contactinfo">Email me at jsliu@umich.edu</p>
     <script src="scripts.js"></script>
+
 </body>
-
-
 </html>
