--- a/resume.html
+++ b/resume.html
@@ -8,26 +8,28 @@
     <meta name="Justin Liu" content="Justin Liu">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
-    <script src="js/scripts.js"></script>
 </head>
 
 <body>
-    <nav>
+    <nav class="navbar">
         <a class="nav-name" href="./index.html">Justin Liu</a>
         <ul class="link">
-            <li><a class="nav-link" href="./index.html">About</a></li>
-            <li><a class="nav-link" href="./index.html">Projects</a></li>
-            <li><a class="nav-link" href="./index.html">Experience</a></li>
-            <li><a class="nav-link" href="./index.html">Contact</a></li>
-            <li><a id="resume_text" class="nav-link" href="./resume.html">Resume</a></li>
+            <li><a class="nav-link" href="#about">About</a></li>
+            <li><a class="nav-link" href="#projects">Projects</a></li>
+            <li><a class="nav-link" href="#experience">Experience</a></li>
+            <!-- <li><a class="nav-link" href="#contact">Contact</a></li> -->
+            <li><a class="nav-link" id="resume_text" href="./resume.html">Resume</a></li>
         </ul>
+        <!-- for mobile version only -->
+        <button class="hamburger">Hamburger</button>
     </nav>
 
-    <iframe id="resume" src="data/Resume.pdf" title="Resume" width="100%" height="1200rem">
+    <iframe id=resume src="data/Resume.pdf" title="Resume" width="100%" height="1200rem">
     </iframe>
 
 
 
+    <script src="scripts.js"></script>
 
 </body>
 </html>
