updated picture and removed media queries

--- a/index.html
+++ b/index.html
@@ -17,21 +17,20 @@
             <li><a class="nav-link" href="#about">About</a></li>
             <li><a class="nav-link" href="#projects">Projects</a></li>
             <li><a class="nav-link" href="#experience">Experience</a></li>
-            <!-- <li><a class="nav-link" href="#contact">Contact</a></li> -->
             <li><a class="nav-link" id="resume_text" href="./resume.html">Resume</a></li>
         </ul>
         <!-- for mobile version only -->
-        <button class="hamburger">Hamburger</button>
+        <button class="hamburger">Menu</button>
     </nav>
 
     <div class="hero" id="hero_box">
-        <img id="hero_img" src="data/justin_picture.jpg" alt="Hero Picture"></img>
+        <img id="hero_img" src="data/justin_picture2.jpg" alt="Hero Picture"></img>
         <div id="hero_text">Hello! I’m Justin and I'm a freshman at UMich College of 
             Engineering majoring in Computer Science. </div>
     </div>
 
     <h2 class="headers" id="about">About Me</h2>
-        <p id="aboutme_text">Some of my favorite activities include running, exercising, making games, and playing leauge. I’m currently a part of
+        <p id="aboutme_text">Some of my hobbies include drawing, exercising and making games. I’m currently a part of
             VOID tech consulting and MedLaunch at the University.
         </p>
     <h2 class="headers" id="projects">Projects</h2>
@@ -47,6 +46,17 @@
                 <img id="p1picture" src="data/tetrisclip.gif" alt="P1picture"></img>
             </div>
         </div>
+        <!-- <div class="project2">
+            <div class="project2left">
+                <p id="p2name">Run Away From Your GPA</p>
+                <hr id="projectLine" size="7" width="90%" color="grey">  
+                <p id="p2paragraph">A fun little one level 2D platformer featuring my principal, the high school, the police station, and Taco Bell</p>
+                <p id="p2link"><a href=https://github.com/Jello15659/RAFYGPA>See more about this project</a></p>
+            </div>
+            <div class="project2right">
+                <img id="p2picture" src="data/tetrisclip.gif" alt="P2picture"></img>
+            </div>
+        </div> -->
     <h2 class="headers" id="experience">Experience</h2>
         <ul class="experience_list">
             <li class="exp1">
