--- a/resume.html
+++ b/resume.html
@@ -14,14 +14,14 @@
     <nav class="navbar">
         <a class="nav-name" href="./index.html">Justin Liu</a>
         <ul class="link">
-            <li><a class="nav-link" href="#about">About</a></li>
-            <li><a class="nav-link" href="#projects">Projects</a></li>
-            <li><a class="nav-link" href="#experience">Experience</a></li>
+            <li><a class="nav-link" href="index.html#about">About</a></li>
+            <li><a class="nav-link" href="index.html#projects">Projects</a></li>
+            <li><a class="nav-link" href="index.html#experience">Experience</a></li>
             <!-- <li><a class="nav-link" href="#contact">Contact</a></li> -->
             <li><a class="nav-link" id="resume_text" href="./resume.html">Resume</a></li>
         </ul>
         <!-- for mobile version only -->
-        <button class="hamburger">Hamburger</button>
+        <button class="hamburger">Menu</button>
     </nav>
 
     <iframe id=resume src="data/Resume.pdf" title="Resume" width="100%" height="1200rem">
