updated experiences and picture

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     </nav>
 
     <div class="hero" id="hero_box">
-        <img id="hero_img" src="data/justin_picture2.jpg" alt="Hero Picture"></img>
-        <div id="hero_text">Hello! I’m Justin and I'm a freshman at UMich College of 
+        <img id="hero_img" src="data/justin_picture3.jpg" alt="Hero Picture"></img>
+        <div id="hero_text">Hello! I’m Justin and I'm a sohpomore at UMich College of 
             Engineering majoring in Computer Science. </div>
     </div>
 
@@ -61,15 +61,15 @@
         <ul class="experience_list">
             <li class="exp1">
                 <img id="exp1pic" src="data/exp1.png" alt="exp1pic"></img>
-                <p id="exp1text">Taught an 8-week introductory course on Pygame (extension of the coding language Python) to children of ages 11-12</p>
+                <p id="exp1text">Research assistant for the Michigan Intelligent Programming Lab. Currently running experiments for the optimization of SQL queries using program synthesis</p>
             </li>
             <li class="exp2">
                 <img id="exp2pic" src="data/exp2.png" alt="exp2pic"></img>
-                <p id="exp2text">Tested mateirals for tensile and anti-corrosive properties to determine optimal bio-material for bone im-plants</p>
+                <p id="exp2text">Data engineering intern at Atomic. Setup infrastructure and workflow orchestration with AWS and Prefect; Automated data ingestion with Python and SQL</p>
             </li>
             <li class="exp3">
                 <img id="exp3pic" src="data/exp3.png" alt="exp3pic"></img>
-                <p id="exp3text">Determined effects of varying treatment methods on anal canal cancer from 1990 to present</p>
+                <p id="exp3text">Taught an 8-week introductory course on Pygame (extension of the coding language Python) to children of ages 11-12</p>
             </li>
         </ul>
     <!-- <h2 class="headers" id="contact">Contact Me</h2>
